@@ -1,5 +1,6 @@
 * 1.0.6 *
 
+* Handle SYBVARIANT types from SQL function. Fixes #317. Fixed #321.
 * Fix `use_utf16` optoin for booleans. Fixes #314
 * Add `-q` check for bin puts. Fixes #318
 * Use FreeTDS 1.00.21.
